<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FM</string>
    <string name="hello_world">Hello</string>
    <string name="action_settings">Settings</string>
    <string name="defaultFm">112.08</string>
    <string name="st">ST</string>
    <string name="md">MO</string>
    <string name="search">Search</string>
    <string name="band">Band</string>
    <string name="a_ps">A PS</string>
    <string name="pre">Pre</string>
    <string name="next">Next</string>
    <string name="volume">音量</string>

</resources>
