<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/mainTopHeight"
    android:divider="@drawable/space_divider"
    android:gravity="center"
    android:orientation="horizontal"
    android:showDividers="middle" 
    >
    <cn.colink.fm.view.FontTextView
        android:id="@+id/mMainSearch"
        style="@style/mainFunText"
        android:text="@string/search" />
    <cn.colink.fm.view.FontTextView
        android:id="@+id/mMainSTOrMD"
        style="@style/mainFunText"
        android:text="@string/st" />
    <cn.colink.fm.view.FontTextView
        android:id="@+id/mMainBand"
        style="@style/mainFunText"
        android:text="@string/band" />
    <cn.colink.fm.view.FontTextView
        android:id="@+id/mMainPs"
        style="@style/mainFunText"
        android:text="@string/a_ps" />
    <cn.colink.fm.view.FontTextView
        android:id="@+id/mMainPre"
        style="@style/mainFunText"
        android:text="@string/pre" />
    <cn.colink.fm.view.FontTextView
        android:id="@+id/mMainNext"
        style="@style/mainFunText"
        android:text="@string/next" />

</LinearLayout>